--- a/games.html
+++ b/games.html
@@ -50,7 +50,7 @@
             <div class="about_choppie">
                 <div class="text_content">
                     <div class="title">Cine este Choppie?</div>
-                    <div class="text">Choppie este robotul cu care vei putea juca fiecare joc in parte.El va avea nevoie de ajutorul tau sa reuseasca sa ia fructele.</div>
+                    <div class="text">Choppie este robotul cu care vei putea juca fiecare joc in parte.El va avea nevoie de ajutorul tau sa reuseasca sa ia fructele si bomboanele.</div>
                 </div>
                 <div class="image">
                     <img src="./img/choppie.svg" alt="choppie image" srcset="">
@@ -60,7 +60,7 @@
             <div class="games">
                 <div class="title">Prezentarea jocurilor</div>
                 <div class="element">
-                    <div class="text_element">Primul joc este destul de simplu.In partea dreapta ai sagetile pentru controlarea lui Choppie.Iar in partea stanga, il ai pe choppie si cateva casute. El trebuie sa ajunga la mar pentru a termina nivelul.</div>
+                    <div class="text_element">Primul joc este destul de simplu.In partea de jos ai sagetile pentru controlarea lui Choppie.Iar in mijloc, il ai pe choppie si cateva casute. El trebuie sa ajunga la mar pentru a termina nivelul.</div>
                 </div>
 
                 <div class="first_game">
